Adding station module
