# index.js
@@ -2,6 +2,7 @@
 const express = require('express')
 const connection = require("./config/db")
 const users = require('./routes/users')
+const stations = require('./routes/stations')
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger_output.json');
 
@@ -17,7 +18,7 @@ app.use('/doc', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 app.use(express.json());
 
-app.use("/api", [users]);
+app.use("/api", [users, stations]);
 
 app.get('/', (req, res) => {
   res.json({ test: 'Hello Naiim!'})
